[package]
name = "obs_midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
midir = "0.9.1"
obws = "0.11.2"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = "0.3.17"
tungstenite = "0.20.0"
